--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h2>Novo Cliente</h2>
                     <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
-                <form class="modal-form">
+                <form id="form" class="modal-form">
                     <input type="text" id="nome" class="modal-field" placeholder="Nome do Cliente">
                     <input type="email" id="email" class="modal-field" placeholder="e-mail do Cliente">
                     <input type="text" id="celular" class="modal-field" placeholder="Celular do Cliente">
